name:                language-python-test
version:             0.6.0
cabal-version:       >= 1.8
synopsis:            testing code for the language-python library
description:         A few executables to test the language-python library.
category:            Language
license:             BSD3
license-file:        LICENSE
copyright:           (c) 2014-2019 Bernard James Pope
author:              Bernard James Pope (Bernie Pope)
maintainer:          florbitous@gmail.com
homepage:            http://github.com/bjpop/language-python-test
build-type:          Simple
stability:           experimental

tested-with:
  GHC == 9.6.1
  GHC == 9.4.4
  GHC == 9.2.7
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3

source-repository head
   type: git
   location: https://github.com/bjpop/language-python-test

Executable language-python-roundtrip
   hs-source-dirs:
      ./src
   main-is: RoundTrip.hs
   other-modules:
   build-depends:    base == 4.*, language-python == 0.6.0

Executable language-python-tokens
   hs-source-dirs:
      ./src
   main-is: Tokens.hs
   other-modules:
   build-depends:    base == 4.*, language-python == 0.6.0

Executable language-python-parse-pretty
   hs-source-dirs:
      ./src
   main-is: ParsePretty.hs
   other-modules:
   build-depends:    base == 4.*, language-python == 0.6.0
